{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 61,
  "lineage": "3112f265-64a8-0943-eb97-216cf8b4278e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf52bcf5db7b003",
            "arn": "arn:aws:ec2:us-west-2:248845559443:instance/i-044c009107462a757",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044c009107462a757",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dab7b1f6d8110b26",
            "private_dns": "ip-192-168-0-106.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.106",
            "public_ip": "18.237.99.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa7db8f02e4f0d45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039782a5d7f39059a",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a65734196ae072d2"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntier_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:internet-gateway/igw-054be4d3dc703c252",
            "id": "igw-054be4d3dc703c252",
            "owner_id": "248845559443",
            "tags": {
              "name": "ntier-igw"
            },
            "tags_all": {
              "name": "ntier-igw"
            },
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:route-table/rtb-04cb071eb6d884bcd",
            "id": "rtb-04cb071eb6d884bcd",
            "owner_id": "248845559443",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:route-table/rtb-032198ab2cbef8b8d",
            "id": "rtb-032198ab2cbef8b8d",
            "owner_id": "248845559443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054be4d3dc703c252",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntier_igw",
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:security-group/sg-0a65734196ae072d2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a65734196ae072d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "248845559443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:subnet/subnet-039782a5d7f39059a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039782a5d7f39059a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248845559443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:subnet/subnet-078ced6362ffea96a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078ced6362ffea96a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248845559443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:subnet/subnet-0b3c96f32ab70ab93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3c96f32ab70ab93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248845559443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:subnet/subnet-0f3b07c4842e23ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3b07c4842e23ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248845559443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-0c394dc15cdc03f51"
          },
          "dependencies": [
            "aws_vpc.ntier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:248845559443:vpc/vpc-0c394dc15cdc03f51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ec7fe212cffe4b80",
            "default_route_table_id": "rtb-05ad14d4704f22312",
            "default_security_group_id": "sg-0ae0502007ff71294",
            "dhcp_options_id": "dopt-0fa4606bead59638d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c394dc15cdc03f51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ad14d4704f22312",
            "owner_id": "248845559443",
            "tags": {
              "Name": "ntier"
            },
            "tags_all": {
              "Name": "ntier"
            }
          }
        }
      ]
    }
  ]
}